src/tests/snapshots/cargo_vet__tests__vet__mock-simple-lower-version-review.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    cargo vet diff third-party1 9.0.0 10.0.0  (used by first-party)  (1 files changed, 19 insertions(+))

estimated audit backlog: 19 lines

Use |cargo vet certify| to record the audits.

