src/tests/snapshots/cargo_vet__tests__vet__mock-simple-missing-direct-internal.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    cargo vet inspect third-party1 10.0.0  (used by first-party)  (100 lines)

estimated audit backlog: 100 lines

Use |cargo vet certify| to record the audits.

