src/tests/snapshots/cargo_vet__tests__vet__mock-simple-missing-direct-leaf.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Failed!

1 unvetted dependencies:
  third-party2:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    cargo vet inspect third-party2 10.0.0  (used by first-party)  (100 lines)

estimated audit backlog: 100 lines

Use |cargo vet certify| to record the audits.

