src/tests/snapshots/cargo_vet__tests__vet__mock-simple-missing-transitive.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "transitive-third-party1",
      "version": "10.0.0",
      "missing_criteria": [
        "reviewed"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "transitive-third-party1",
        "notable_parents": "third-party1",
        "suggested_criteria": [
          "reviewed"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "reviewed": [
        {
          "name": "transitive-third-party1",
          "notable_parents": "third-party1",
          "suggested_criteria": [
            "reviewed"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        }
      ]
    },
    "total_lines": 100
  }
}
