src/tests/snapshots/cargo_vet__tests__vet__mock-simple-missing-transitive.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

1 unvetted dependencies:
  transitive-third-party1:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    Command                                           Publisher  Used By       Audit Size
    cargo vet inspect transitive-third-party1 10.0.0  UNKNOWN    third-party1  100 lines

estimated audit backlog: 100 lines

Use |cargo vet certify| to record the audits.

