src/tests/snapshots/cargo_vet__tests__vet__mock-simple-needed-reversed-delta-to-unaudited.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    Command                                Publisher  Used By      Audit Size
    cargo vet inspect third-party1 10.0.0  UNKNOWN    first-party  100 lines

estimated audit backlog: 100 lines

Use |cargo vet certify| to record the audits.

